--- a/config/etc/nginx/conf.d/proxy.conf
+++ b/config/etc/nginx/conf.d/proxy.conf
@@ -26,7 +26,7 @@ server {
   }
 
   location /api {
-    proxy_pass __pass:__port;
+    proxy_pass __proxy;
     proxy_http_version 1.1;
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection 'upgrade';
