--- a/config/etc/nginx/nginx.conf
+++ b/config/etc/nginx/nginx.conf
@@ -3,7 +3,7 @@
 load_module modules/ngx_http_brotli_filter_module.so;
 load_module modules/ngx_http_brotli_static_module.so;
 
-user nginx;
+user root;
 worker_processes auto;
 
 error_log /var/log/nginx/error.log warn;
