Add utf-8 to nginx config

--- a/config/etc/nginx/nginx.conf
+++ b/config/etc/nginx/nginx.conf
@@ -31,6 +31,7 @@ http {
   types_hash_max_size 2048;
   client_max_body_size 20m;
   server_tokens off;
+  charset utf-8;
 
   gzip on;
   gzip_vary on;
