--- a/config/etc/nginx/nginx.conf
+++ b/config/etc/nginx/nginx.conf
@@ -35,5 +35,6 @@ http {
   gzip_comp_level 6;
   gzip_types text/plain text/css text/xml application/json application/javascript application/xml+rss application/atom+xml image/svg+xml;
 
+  include /etc/nginx/default.conf;
   include /etc/nginx/conf.d/*.conf;
 }
