--- a/config/etc/nginx/default.conf
+++ b/config/etc/nginx/default.conf
@@ -8,7 +8,7 @@ server {
   #access_log  /var/log/nginx/host.access.log  main;
 
   location / {
-    root /usr/share/nginx/html;
+    root /root/waveorb-server/config/html;
     index index.html;
   }
 
@@ -18,7 +18,7 @@ server {
   #
   error_page 500 502 503 504 /50x.html;
   location = /50x.html {
-    root /usr/share/nginx/html;
+    root /root/waveorb-server/config/html;
   }
 
   # proxy the PHP scripts to Apache listening on 127.0.0.1:80
